@@ -3,6 +3,7 @@ CHANGELOG
 2.0.76
 UTIL:
 * type=vendor-migration | introduce 3rd party Firewall configuration migration to PANOS XML config file
+* type=vendor-migration | vendor=stonesoft - extend validation output
 
 BUGFIX:
 
